feat: Command DTO 및 ReserverName VO 도입